<resources>
    <string name="app_name">ShoppingCart</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Send</string>
    <string name="action_edit">Edit</string>

    <string name="title">Name</string>
    <string name="total">Total:</string>

    <!-- EmptyView -->
    <string name="empty_list">List is empty</string>

    <!-- Titles -->
    <string name="edit_item_title">Edit item</string>

    <!-- Bottom menu -->
    <string name="products">All products</string>
    <string name="recipes">Recipes</string>
    <string name="cart">Cart</string>

    <!-- Default units -->
    <string-array name="units">
        <item>kg</item>
        <item>l</item>
        <item>th</item>
    </string-array>

    <!-- Item -->
    <string name="item_titlr">"Item name:"</string>
    <string name="item_min_count">"Min count:"</string>
    <string name="item_unit">"Count unit:"</string>
    <string name="item_price">"Price(for 1 piece):"</string>
    <string name="item_category">"Category:"</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_deleteAll">Delete all</string>
    <string name="action_deleteChecked">Delete checked</string>
    <string name="new_category">New category</string>
    <string name="enter_сategory">Enter category</string>
    <string name="delete">Delete</string>
    <string name="delete_сategory">Delete category</string>
    <string name="tv_description">Loading...</string>
    <string name="fail_sending">Sending failed</string>

    <string name="cart_product_title">%s (%s %s)</string>
    <string name="invalid_field">Field "%s" is invalid!</string>

    <string name="deleted_category" formatted="false">Category %s is deleted</string>
    <string name="item_title_hint">Title</string>
    <string name="item_category_hint">Category</string>
    <string name="item_count_hint">Count</string>
    <string name="item_price_hint">Price(for 1 th)</string>
    <string name="field_count">count</string>
    <string name="field_price">price</string>
    <string name="field_title">Title</string>
    <string name="category">Category</string>
    <string name="will_be_soon">It will be soon... Now this function is not realized. Sorry</string>
    <string name="templates">Templates</string>
    <string name="check_fields">Check fields!</string>
    <string name="choose_app">Choose app to share</string>
    <string name="added_to_list">Product added to lists</string>
    <string name="confirm_deleting_category">re you sure to delete category?</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="result">Result</string>
    <string name="confirm_deleting">Confirm deleting</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="buyed_on">Куплено на сумму:</string>
    <string name="full_price">Общая стоимость:</string>
    <string name="add">Add</string>
    <string name="add_item">Добавить</string>
    <string name="templateTitle">Название шаблона:</string>
    <string name="add_product">Добавить продукт</string>


</resources>
