<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_send"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/action_deleteAll"
                    android:orderInCategory="100"
                    android:title="@string/action_deleteAll"/>
                <item
                    android:id="@+id/action_deleteChecked"
                    android:orderInCategory="100"
                    android:title="@string/action_deleteChecked"/>
            </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>