<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_add_view"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="300dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/add_item"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/second_row"
            android:layout_toLeftOf="@id/second_row"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/item_title_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/sp_item_category"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_margin="8dp"
                android:hint="@string/item_category_hint"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/third_row"
            android:layout_toLeftOf="@+id/third_row"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_item_count"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/item_count_hint"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_item_price"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/item_price_hint"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/third_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/sp_item_unit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:entries="@array/units" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/addind_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rows"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_item_new_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/item_category_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textSize="14sp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btn_add_item_to_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:src="@android:drawable/ic_input_add"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>
