<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CartActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">
        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="115dp"
        android:paddingTop="60dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_list"
    />

    <LinearLayout
        android:id="@+id/total_price_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_above="@+id/buyed_price_layout"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewEditFragmentStyle"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/full_price"
            />
        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text=""
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buyed_price_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewEditFragmentStyle"
            android:layout_marginLeft="8dp"
            android:text="@string/buyed_on"
            android:layout_marginStart="8dp" />
        <TextView
            android:id="@+id/checked_items_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text=""
            />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_add"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        tools:ignore="VectorDrawableCompat" />
    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation_menu" />

</RelativeLayout>
